legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr22308-1.c-4.8.2-0.out.txt
pr22308-1.c: In function ‘bar’:
pr22308-1.c:12:3: error: assignment of read-only variable ‘t’
   t = s;  
   ^
